--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,6 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
-# nyc test coverage
-.nyc_output
-
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
@@ -28,10 +25,16 @@ build/Release
 
 # Dependency directories
 node_modules
-jspm_packages
+bower_components
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# Metalsmith dist
+build
+
+# Hidden OS
+.DS_store
