--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "autoprefixer": "^6.4.0",
     "handlebars": "^4.0.5",
+    "handlebars-helpers": "^0.7.5",
     "metalsmith": "^2.2.0",
     "metalsmith-assets": "^0.1.0",
     "metalsmith-collections": "^0.7.0",
@@ -39,6 +40,7 @@
     "metalsmith-metadata": "0.0.4",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-postcss": "^4.0.0",
+    "metalsmith-register-helpers": "^0.2.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-with-postcss": "^1.0.0"
   },
