--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "metalsmith-postcss": "^4.0.0",
     "metalsmith-register-helpers": "^0.2.0",
     "metalsmith-sass": "^1.3.0",
-    "metalsmith-with-postcss": "^1.0.0"
+    "metalsmith-with-postcss": "^1.0.0",
+    "typogr": "^0.6.6"
   },
   "devDependencies": {
     "metalsmith-browser-sync": "^1.1.1",
