--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node index.js",
     "debug": "DEBUG=metalsmith:*, npm run dev",
     "dev": "npm start --development",
-    "build": "npm start --production"
+    "build": "npm start --production",
+    "format": "semistandard --fix && stylefmt -R src/styles/",
+    "lint": "semistandard --verbose && htmlhint --ignore **/www/** && stylelint '**/*.scss'"
   },
   "repository": {
     "type": "git",
@@ -26,27 +28,41 @@
     "url": "https://github.com/ianrose/machinist/issues"
   },
   "homepage": "https://github.com/ianrose/machinist#readme",
+  "semistandard": {
+    "ignore": [
+      "index.js",
+      "**/vendor/**"
+    ]
+  },
   "dependencies": {
     "autoprefixer": "^6.4.0",
     "handlebars": "^4.0.5",
     "handlebars-helpers": "^0.7.5",
     "metalsmith": "^2.2.0",
     "metalsmith-assets": "^0.1.0",
-    "metalsmith-collections": "^0.7.0",
-    "metalsmith-ignore": "^0.1.2",
+    "metalsmith-collections": "petasittek/metalsmith-collections",
+    "metalsmith-drafts": "0.0.1",
     "metalsmith-in-place": "^1.4.4",
     "metalsmith-layouts": "^1.6.5",
+    "metalsmith-mapsite": "^1.0.4",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-metadata": "0.0.4",
+    "metalsmith-paths": "^2.1.2",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-postcss": "^4.0.0",
     "metalsmith-register-helpers": "^0.2.0",
     "metalsmith-sass": "^1.3.0",
+    "metalsmith-uglify": "^1.5.1",
     "metalsmith-with-postcss": "^1.0.0",
     "typogr": "^0.6.6"
   },
   "devDependencies": {
+    "htmlhint": "^0.9.13",
     "metalsmith-browser-sync": "^1.1.1",
-    "metalsmith-debug": "^1.1.0"
+    "metalsmith-debug": "^1.1.0",
+    "semistandard": "^9.1.0",
+    "stylefmt": "^4.3.1",
+    "stylelint": "^7.5.0",
+    "stylelint-config-standard": "^14.0.0"
   }
 }
