--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
       "**/vendor/**"
     ]
   },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
+  },
   "dependencies": {
     "autoprefixer": "^6.4.0",
     "handlebars": "^4.0.5",
@@ -63,6 +66,6 @@
     "semistandard": "^9.1.0",
     "stylefmt": "^4.3.1",
     "stylelint": "^7.5.0",
-    "stylelint-config-standard": "^14.0.0"
+    "stylelint-config-standard": "^13.0.0"
   }
 }
