changes layouts and partials ext to hbs, provides model

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "debug": "DEBUG=metalsmith:*, npm run dev",
+    "debug": "DEBUG=metalsmith:*, NODE_ENV=debug npm run dev",
     "dev": "npm start --development",
     "build": "npm start --production",
     "format": "standard --fix && stylefmt -R src/styles/",
