--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -1,9 +1,11 @@
 {
   "tagname-lowercase": true,
   "attr-lowercase": ["viewBox"],
+  "attr-value-double-quotes": true,
   "tag-pair": true,
   "id-unique": true,
   "src-not-empty": true,
   "attr-no-duplication": true,
-  "title-require": true
+  "doctype-first": false,
+  "spec-char-escape": false
 }
