adds a vendor style reset, updates readme

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "stylelint": {
+    "ignoreFiles": ["src/styles/vendor/*.scss"],
     "extends": "stylelint-config-standard"
   },
   "dependencies": {
