--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     ]
   },
   "stylelint": {
-    "ignoreFiles": ["src/styles/vendor/*.scss"],
+    "ignoreFiles": [
+      "src/styles/vendor/*.scss"
+    ],
     "extends": "stylelint-config-standard"
   },
   "dependencies": {
@@ -53,6 +55,7 @@
     "metalsmith-paths": "^2.1.2",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-postcss": "^4.0.0",
+    "metalsmith-raw": "^0.2.0",
     "metalsmith-register-helpers": "^0.2.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-uglify": "^1.5.1",
