--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "A boilerplate for a Metalsmith static site.",
   "main": "index.js",
+  "pre-commit": "lint-staged",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
@@ -10,7 +11,9 @@
     "dev": "npm start --development",
     "build": "npm start --production",
     "format": "standard --fix && stylefmt -R src/styles/",
-    "lint": "standard --verbose && stylelint '**/*.scss' && htmlhint **/*.{hbs,html} --config .htmlhintrc --ignore **/www/**"
+    "style-lint": "stylelint '**/*.scss'",
+    "lint": "standard --verbose && stylelint '**/*.scss' && htmlhint **/*.{hbs,html} --config .htmlhintrc --ignore **/www/**",
+    "lint-staged": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -28,6 +31,9 @@
     "url": "https://github.com/ianrose/machinist/issues"
   },
   "homepage": "https://github.com/ianrose/machinist#readme",
+  "lint-staged": {
+    "**/*.scss": "style-lint"
+  },
   "standard": {
     "ignore": [
       "**/vendor/**"
@@ -65,9 +71,11 @@
   },
   "devDependencies": {
     "htmlhint": "^0.9.13",
+    "lint-staged": "^3.2.1",
     "metalsmith-browser-sync": "^1.1.1",
     "metalsmith-debug": "^1.1.0",
     "metalsmith-writemetadata": "^0.4.5",
+    "pre-commit": "^1.1.3",
     "standard": "^8.5.0",
     "stylefmt": "^4.3.1",
     "stylelint": "^7.5.0",
