--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "npm start --development",
     "build": "npm start --production",
     "format": "standard --fix && stylefmt -R src/styles/",
+    "script-lint": "standard --verbose",
     "style-lint": "stylelint '**/*.scss'",
     "lint": "standard --verbose && stylelint '**/*.scss' && htmlhint **/*.{hbs,html} --config .htmlhintrc --ignore **/www/**",
     "lint-staged": "lint-staged"
@@ -32,7 +33,8 @@
   },
   "homepage": "https://github.com/ianrose/machinist#readme",
   "lint-staged": {
-    "**/*.scss": "style-lint"
+    "**/*.scss": "style-lint",
+    "*.js": "script-lint"
   },
   "standard": {
     "ignore": [
