--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "metalsmith-assets": "^0.1.0",
     "metalsmith-collections": "petasittek/metalsmith-collections",
     "metalsmith-drafts": "0.0.1",
+    "metalsmith-fingerprint-ignore": "^1.1.2",
     "metalsmith-in-place": "^1.4.4",
     "metalsmith-layouts": "^1.6.5",
     "metalsmith-mapsite": "^1.0.4",
