--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "metalsmith-register-helpers": "^0.2.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-uglify": "^1.5.1",
-    "metalsmith-webpack": "^1.0.3",
     "metalsmith-with-postcss": "^1.0.0",
+    "ms-webpack": "^1.0.2",
     "typogr": "^0.6.6"
   },
   "devDependencies": {
