src and dest paths, node_env’s

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "debug": "DEBUG=metalsmith:*, NODE_ENV=debug npm run dev",
-    "dev": "npm start --development",
-    "build": "npm start --production",
+    "dev": "NODE_ENV=development npm start",
+    "build": "NODE_ENV=production npm start",
+    "stage": "NODE_ENV=staging npm start",
     "format": "standard --fix && stylefmt -R src/styles/",
     "script-lint": "standard --verbose",
     "style-lint": "stylelint '**/*.scss'",
