--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "metalsmith-uglify": "^1.5.1",
     "metalsmith-webpack": "git+https://github.com/okonet/metalsmith-webpack.git",
     "metalsmith-with-postcss": "^1.0.0",
-    "minimatch": "^3.0.3",
+    "metalsmith-models": "git+https://github.com/ianrose/metalsmith-models.git#handles-no-models",
     "typogr": "^0.6.6"
   },
   "devDependencies": {
