--- a/config.json
+++ b/config.json
@@ -30,5 +30,9 @@
   },
   "openGraph": {
     "image": null
+  },
+  "googleDocJson": {
+    "fileId": null,
+    "output": "./src/data/models/archieExample.json"
   }
 }
