--- a/config.json
+++ b/config.json
@@ -36,7 +36,7 @@
     "output": "./src/data/models/archieExample.json"
   },
   "googleSheetJson": {
-    "key": null,
+    "fileId": null,
     "output": "./src/data/models/sheetExample.json",
     "worksheet": 0
   }
