--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "dev": "NODE_ENV=development npm start",
     "build": "NODE_ENV=production npm start",
     "stage": "NODE_ENV=staging npm start",
-    "format": "standard --fix && stylefmt -R src/styles/",
-    "script-lint": "standard --verbose",
-    "style-lint": "stylelint '**/*.scss'",
-    "lint": "standard --verbose && stylelint '**/*.scss' && htmlhint **/*.{hbs,html} --config .htmlhintrc --ignore **/www/**",
+    "format": "eslint \"src/scripts/**\" \"lib/**\" --fix && stylelint \"src/styles/**/*.scss\" --fix",
+    "script-lint": "eslint \"src/scripts/**\" \"lib/**\"",
+    "style-lint": "stylelint \"**/*.scss\"",
+    "lint": "npm run script-lint && npm run style-lint && htmlhint **/*.{hbs,html} --config .htmlhintrc --ignore **/www/**",
     "lint-staged": "lint-staged"
   },
   "repository": {
@@ -38,22 +38,12 @@
     "*.scss": "style-lint",
     "*.js": "script-lint"
   },
-  "standard": {
-    "ignore": [
-      "**/vendor/**"
-    ]
-  },
-  "stylelint": {
-    "ignoreFiles": [
-      "src/styles/vendor/*.scss"
-    ],
-    "extends": "stylelint-config-standard"
-  },
   "dependencies": {
     "autoprefixer": "^6.4.0",
     "googledoc-to-json": "^0.3.0",
     "handlebars": "^4.0.5",
     "handlebars-helpers": "^0.7.5",
+    "js-yaml": "^3.10.0",
     "metalsmith": "^2.2.0",
     "metalsmith-assets": "^0.1.0",
     "metalsmith-collections": "petasittek/metalsmith-collections",
@@ -72,21 +62,24 @@
     "metalsmith-raw": "^0.2.0",
     "metalsmith-register-helpers": "^0.2.0",
     "metalsmith-sass": "^1.4.0",
-    "metalsmith-uglify": "^1.5.1",
-    "metalsmith-webpack": "git+https://github.com/okonet/metalsmith-webpack.git",
+    "metalsmith-webpack2": "git+https://github.com/ianrose/metalsmith-webpack2.git",
     "metalsmith-with-postcss": "^1.0.0",
     "typogr": "^0.6.6"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.11.0",
     "htmlhint": "^0.9.13",
-    "lint-staged": "^3.2.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^5.0.0",
     "metalsmith-browser-sync": "^1.1.1",
     "metalsmith-debug": "^1.1.0",
     "metalsmith-writemetadata": "^0.4.5",
-    "pre-commit": "^1.1.3",
-    "standard": "^8.6.0",
-    "stylefmt": "^4.3.1",
-    "stylelint": "^7.7.1",
-    "stylelint-config-standard": "^15.0.1"
+    "standard": "^10.0.3",
+    "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^17.0.0"
   }
 }
